# guardrails-review

./: .codespellrc  .coverage  .editorconfig  .gitignore  .guardrails-exceptions.toml  .guardrails-review.toml  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  action.yml  communication.md  memory.json  pyproject.toml  requirements-audit.txt  ruff.toml
.claude/rules/: python-source.md
.github/workflows/: check.yml  guardrails-review.yml
docs/: ADR-001-architecture.md  ADR-002-llm-prompt-design.md  SPEC.md
mutants/: mutmut-stats.json  pyproject.toml
mutants/src/guardrails_review/: __init__.py  cache.py  cli.py  config.py  diff.py  reviewer.py  types.py
mutants/tests/: test_cache.py  test_diff.py  test_github.py
src/guardrails_review/: cache.py  cli.py  config.py  context.py  diff.py  github.py  llm.py  memory.py  models.py  parser.py  prompts.py  reviewer.py  threads.py  tools.py  types.py
templates/: .guardrails-review.toml  guardrails-review.yml
tests/: test_cache.py  test_cli.py  test_config.py  test_context.py  test_diff.py  test_github.py  test_llm.py  test_memory.py  test_models.py  test_parser.py  test_prompts.py  test_reviewer.py  test_threads.py  test_tools.py  test_types.py
